# fraud-detect

./: README.md  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/core/: config.py  llm_client.py
app/models/: transaction.py
app/services/: ensemble_detector.py  fraud_detector.py  llm_fraud_detector.py  prompt_builder.py
