[project]
name = "fraud-detection-api"
version = "0.1.0"
description = "A production-ready fraud detection API combining rule-based heuristics with local LLM for intelligent transaction analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "ruff>=0.14.6",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",  # For making HTTP requests to Ollama
    "pydantic-settings>=2.0.0",  # For configuration management
]
